Sprint3/Sprint3-project/subnet.tf
# resource "aws_subnet" "s3-subnet" {
  # vpc_id                  = module.vpc.default_vpc_id
  # cidr_block              = "172.20.112.0/24"
  # map_public_ip_on_launch = true
  # availability_zone       = "us-east-1a"
# }
